Fixed sidebar and white space on mobile

--- a/platform/themes/milani/assets/sass/_custom.scss
+++ b/platform/themes/milani/assets/sass/_custom.scss
@@ -1803,9 +1803,41 @@ body {
     }
 }
 
-.single-social-share > p {
-    cursor: pointer;
+.single-social-share {
+    @media (max-width: 991px) {
+        margin-top: 10px !important
+    }
+
+    & > p {
+        cursor: pointer;
+    }
 }
+
+.widget-area-mobile {
+    display: none;
+    margin: 0 -15px;
+    padding: 15px 15px;
+    margin-bottom: 30px;
+
+    @media (max-width: 991px) {
+        display: block;
+    }
+}
+
+.primary-sidebar {
+    display: none;
+
+    @media (min-width: 992px) {
+        display: block;
+    }
+}
+
+@media (max-width: 991px) {
+    .page-header + section {
+        margin-top: 10px !important;
+    }
+}
+
 
 
 /** - DEBUG - **/
