--- a/platform/themes/milani/public/css/style.css
+++ b/platform/themes/milani/public/css/style.css
@@ -9658,10 +9658,41 @@ body {
   margin-top: 30px;
 }
 
+@media (max-width: 991px) {
+  .single-social-share {
+    margin-top: 10px !important;
+  }
+}
 .single-social-share > p {
   cursor: pointer;
 }
 
+.widget-area-mobile {
+  display: none;
+  margin: 0 -15px;
+  padding: 15px 15px;
+  margin-bottom: 30px;
+}
+@media (max-width: 991px) {
+  .widget-area-mobile {
+    display: block;
+  }
+}
+
+.primary-sidebar {
+  display: none;
+}
+@media (min-width: 992px) {
+  .primary-sidebar {
+    display: block;
+  }
+}
+
+@media (max-width: 991px) {
+  .page-header + section {
+    margin-top: 10px !important;
+  }
+}
 /** - DEBUG - **/
 #preloader-active {
   display: none;
